Fixed Space Issue Profile Page
Fixed the spacing issue with profile page. Before would leave big gap at top, and do ease type thing each time. Removes the ease * rule, no css rule should apply to all elements.

--- a/frontend/src/css/AboutUsPage.css
+++ b/frontend/src/css/AboutUsPage.css
@@ -48,10 +48,6 @@
     font-size: 1rem;
 }
 
-* {
-    transition: all 2s ease;
-}
-
 .about-us-container h1 {
     font-family: "Rowdies", sans-serif;
     font-size: 48px;
