--- a/frontend/src/css/ProfilePage.css
+++ b/frontend/src/css/ProfilePage.css
@@ -66,7 +66,7 @@
   box-shadow: 0 4px 8px rgba(0,0,0,0.5);
   max-width: 600px;
   width: 100%;
-  margin: 100px auto 0;
+  margin: auto; /* Center horizontally and vertically */
   border: 4px solid;
   border-image: linear-gradient(to right, #f44336, #1976D2) 1;
   overflow: auto;
@@ -202,4 +202,9 @@
   
   .modal-buttons button:last-child {
     margin-right: 0;
+  }
+
+  .spacerProfile {
+    margin: 20px;
+    display: block;
   }
